# color-bottles-puzzle

./: .gitignore  LICENSE  Makefile  README.md  main.py  pyproject.toml
color_bottles/: core.py  play_game.py
color_bottles/frontend/: console.py  console_front.py  pygame.py  pygame_front.py
demo/: index.html
tests/: test_bottles.py
